--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "signupform_mongo",
+  "name": "Contact-form",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "controllers": "^0.0.2",
     "express": "^4.17.1",
     "mongoose": "^5.10.9",
     "nodemon": "^2.0.6"
